--- a/SkylinesTelemetryMod/SkylinesTelemetryMod.csproj
+++ b/SkylinesTelemetryMod/SkylinesTelemetryMod.csproj
@@ -29,6 +29,7 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <PlatformTarget>x64</PlatformTarget>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <WarningsAsErrors>Nullable</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -39,9 +40,13 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <WarningsAsErrors>Nullable</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+    <WarningsAsErrors>Nullable</WarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
@@ -62,9 +67,6 @@
       <HintPath>E:\Games\CitiesSkylines\Cities_Data\Managed\ICities.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Json.Net.Unity3D.9.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="Spring.Core, Version=2.0.1.35000, Culture=neutral, PublicKeyToken=65e474d141e25e07, processorArchitecture=MSIL">
       <HintPath>packages\Spring.Core.2.0.1\lib\net35\Spring.Core.dll</HintPath>
     </Reference>
@@ -74,9 +76,7 @@
     <Reference Include="System.Drawing">
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
       <HintPath>$(SkylinesTelemetryGameHome)Cities_Data\Managed\UnityEngine.dll</HintPath>
@@ -92,22 +92,38 @@
     <Compile Include="Bindings\Native\SafeKafkaPtrHandle.cs" />
     <Compile Include="Bindings\Native\SafeNativeLibraryHandle.cs" />
     <Compile Include="Bindings\Native\PlatformNative.cs" />
-    <Compile Include="Collector\IncidentTelemetryCollector.cs" />
+    <Compile Include="Collector\ThreadingExtensionCollector.cs" />
+    <Compile Include="Collector\Updater\BuildingUpdaterExtensionUpdaterService.cs" />
+    <Compile Include="Collector\Updater\IThreadingExtensionUpdaterService.cs" />
+    <Compile Include="Collector\Updater\IUpdaterService.cs" />
+    <Compile Include="Collector\Updater\TransferUpdaterService.cs" />
+    <Compile Include="Data\IBuilding.cs" />
+    <Compile Include="Data\ITransfer.cs" />
+    <Compile Include="Data\SkylinesTransfer.cs" />
+    <Compile Include="Data\SkylinesVehicle.cs" />
+    <Compile Include="Data\TelemetryMetadata.cs" />
     <Compile Include="Extension\SimulationManagerExtension.cs" />
-    <Compile Include="Model\FireTruckTelemetry.cs" />
-    <Compile Include="Model\ITelemetryData.cs" />
-    <Compile Include="Model\VehicleTelemetry.cs" />
-    <Compile Include="Publisher\IPublisherSerializer.cs" />
+    <Compile Include="Data\ITelemetryData.cs" />
+    <Compile Include="Data\IVehicle.cs" />
+    <Compile Include="Extension\TransferManagerExtension.cs" />
+    <Compile Include="Mapper\BuildingMapper.cs" />
+    <Compile Include="Mapper\TransferMapper.cs" />
+    <Compile Include="SimpleJson.cs" />
+    <Compile Include="SkylinesLog.cs" />
+    <Compile Include="SkylinesReflection.cs" />
+    <Compile Include="Mapper\VehicleMapper.cs" />
+    <Compile Include="Mapper\IMapper.cs" />
+    <Compile Include="Publisher\Serde\IPublisherSerializer.cs" />
     <Compile Include="Publisher\IPublisherService.cs" />
     <Compile Include="Collector\ITelemetryCollector.cs" />
     <Compile Include="Collector\SkylinesTelemetryCollector.cs" />
-    <Compile Include="Publisher\PublisherSerializer.cs" />
+    <Compile Include="Publisher\Serde\PublisherSerializer.cs" />
     <Compile Include="SkylinesGame.cs" />
     <Compile Include="SkylinesTelemetryLoading.cs" />
     <Compile Include="SkylinesTelemetryMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bindings\Native\KafkaDefs.cs" />
-    <Compile Include="Collector\FireTruckTelemetryCollector.cs" />
+    <Compile Include="Collector\Updater\ServiceVehicleUpdaterService.cs" />
     <Compile Include="Publisher\SkylinesTelemetryPublisherService.cs" />
   </ItemGroup>
   <ItemGroup>
