--- a/SkylinesTelemetryMod/packages.config
+++ b/SkylinesTelemetryMod/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.0.0" targetFramework="net35" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net35" />
-  <package id="Json.Net.Unity3D" version="9.0.1" targetFramework="net35" />
   <package id="librdkafka.redist" version="1.9.2" targetFramework="net35" />
+  <package id="SimpleJson" version="0.38.0" targetFramework="net35" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net35" />
 </packages>
