--- a/skylines-processing/pom.xml
+++ b/skylines-processing/pom.xml
@@ -85,5 +85,10 @@
             <artifactId>log4j-slf4j2-impl</artifactId>
             <version>2.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.jnr</groupId>
+            <artifactId>jnr-ffi</artifactId>
+            <version>2.2.13</version>
+        </dependency>
     </dependencies>
 </project>
